--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="JavaCRM - Enterprise Customer Relationship Management" />
     <meta property="og:description" content="Enterprise CRM solution built with Java. Streamline customer relationships, boost sales, and scale your business." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.app.goo.gl/8FBsZPrwqFsSKy9q7" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@javacrm" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://images.app.goo.gl/YP5ZdxbnGi7EsRVN6" />
   </head>
 
   <body>
